<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FAFAFA"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_brand_logo"
        app:layout_heightPercent="30%"
        android:src="@drawable/business_card" />


    <TextView
        android:id="@+id/about_label_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/create_by_yevhen_solodilov"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/about_text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"
        tools:text="Version: 0.0.1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/about_label_creator"
        android:layout_below="@id/about_logo"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="4dp"
        android:background="#EDEDED">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description" />
    </ScrollView>

</android.support.percent.PercentRelativeLayout>