<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.CardView
        android:id="@+id/button_winter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/anchor"
        android:layout_alignEnd="@id/anchor"
        android:layout_alignRight="@id/anchor"
        android:layout_margin="6dp"
        app:cardCornerRadius="15dp">
        <ImageView
            android:id="@+id/winter_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/title_winter" />
        <TextView
            android:text="@string/text_winter"
            style="@style/style_title_text"
            android:textColor="#0b4586"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_spring"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/anchor"
        android:layout_alignLeft="@id/anchor"
        android:layout_margin="6dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:scaleType="centerCrop"
            android:src="@drawable/title_spring" />
        <TextView
            android:text="@string/text_spring"
            style="@style/style_title_text"
            android:textColor="#26860b"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_summer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignRight="@id/anchor"
        android:layout_alignTop="@id/anchor"
        android:layout_margin="6dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:scaleType="centerCrop"
            android:src="@drawable/title_summer" />
        <TextView
            android:text="@string/text_summer"
            style="@style/style_title_text"
            android:textColor="#1a6e00"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_autumn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@id/anchor"
        android:layout_alignTop="@id/anchor"
        android:layout_margin="6dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:scaleType="centerCrop"
            android:src="@drawable/title_autumn" />
        <TextView
            android:text="@string/text_autumn"
            style="@style/style_title_text"
            android:textColor="#766b2d"/>
    </android.support.v7.widget.CardView>
</RelativeLayout>